--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "imagedilema",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://didacll.github.io/imagedilema",
+
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -11,6 +13,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "bootstrap": "^5.3.0",
+    "gh-pages": "^3.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -21,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "",
     "@types/mocha": "^10.0.1",
     "mocha": "^10.2.0",
     "ts-node": "^10.9.1",
