--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "",
+    "@babel/plugin-proposal-private-property-in-object": "7.16.7",
     "@types/mocha": "^10.0.1",
     "mocha": "^10.2.0",
     "ts-node": "^10.9.1",
